--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/abd-abdur/restaurant-finder#readme",
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "json2csv": "^6.0.0-alpha.2",
